# libcatboy

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  docs.md
examples/: example1.cpp  example2.cpp  example3.cpp  example4.cpp
include/: catboys.hpp
src/: catboys.cpp  lib.rs
